--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ requests==2.31.0
 python-multipart==0.0.6
 pydantic==2.5.0
 tenacity==9.1.2
+textblob==0.18.0.post0
+gensim==4.3.2
+transformers==4.40.1
+torch>=1.13.0 
+scipy>=1.10.0  
+scikit-learn>=1.2.0 
