--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,5 @@ services:
     name: llm-ner-system
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 8000
+    startCommand: uvicorn main:app --host=0.0.0.0 --port $PORT
     plan: free
