--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ python-multipart==0.0.6
 pydantic==2.5.0
 tenacity==9.1.2
 textblob==0.18.0.post0
-gensim==4.3.2
 transformers==4.40.1
+gensim==4.3.1
+scipy==1.9.3
 torch>=1.13.0 
-scipy>=1.10.0  
 scikit-learn>=1.2.0 
