--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
   - type: web
     name: llm-ner-system
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt && python -m spacy download en_core_web_sm
     startCommand: uvicorn main:app --host=0.0.0.0 --port $PORT
     plan: free
